data/derived/comb/progs/unify/prog7149.ml.out
Characters 70-81:
  else digitsOfInt -1;;
       ^^^^^^^^^^^
Error: This expression has type int -> 'a list
       but an expression was expected of type int
